작물리포트 레이아웃 변경

--- a/app/src/main/res/layout/crop_report.xml
+++ b/app/src/main/res/layout/crop_report.xml
@@ -21,10 +21,10 @@
             android:layout_x="120dp"
             android:layout_y="-24dp">
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="vertical" />-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
         </ScrollView>
     </WebView>
 
