--- a/app/src/main/res/layout/crop_report.xml
+++ b/app/src/main/res/layout/crop_report.xml
@@ -9,7 +9,8 @@
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="작물" />
+        android:text="작물 리포트"
+        android:textSize="20sp" />
 
     <WebView
         android:layout_width="match_parent"
